--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <canvas id="gameBoard"></canvas>
-  <script type="application/javascript" src="./main.js"> </script>
+  <script type="application/javascript" src="./dist/main.js"> </script>
 
 </body>
 
