--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"  type="text/css" href="./css/main.css" />
   <title>Valor</title>
 </head>
 <body>
+  <div class="intro"> <button id="play"> For Valor! </button></div>
   <canvas id="gameBoard"></canvas>
   <script type="application/javascript" src="./dist/main.js"> </script>
 
