add note about game on load page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <div class="intro"> <button id="play"> For Valor! </button></div>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div><p>Please click the mouse again once you see the game or it doesnt load properly. Trying to fix that. </p></div>
   <canvas id="gameBoard"></canvas>
   <script type="application/javascript" src="./dist/main.js"> </script>
 
