add mute button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 <body>
   <div class="intro"> <button id="play"> For Valor! </button></div>
  
+  <input type="image"  id="audio" src="./src/images/audioButton.png" hidden="true" />
+  <input type="image"  id="mute" src="./src/images/muteButton.png" hidden="true" />
+  <!-- <button id="mute" hidden="true">Mute</button> -->
+  <script>
 
-  
+
+
+  </script>
   <canvas id="gameBoard"></canvas>
+  
   <script type="application/javascript" src="./dist/main.js"> </script>
 
 </body>
