reload page/ play again feature

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 <body>
   <div class="intro"> <button id="play"> For Valor! </button></div>
  
+ 
   <input type="image"  id="audio" src="./src/images/audioButton.png" hidden="true" />
   <input type="image"  id="mute" src="./src/images/muteButton.png" hidden="true" />
-
+  <button id="playAgain" hidden="true"> Play Again? </button>
   <canvas id="gameBoard"></canvas>
   
   <script type="application/javascript" src="./dist/main.js"> </script>
+
 
 </body>
 
