add a home page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,32 @@
           </li>
         </ul>
       </div>
+      <div class="gameBackgroundInfo">
+        <p>
+          The king and guard have left for vacation. They mistakenly forgot that their best warrior was patrolling the dungeon and locked the door behind them. The future doesn't look good.
+          You will most likely only survive for a day or two so you might as well take out as many baddies down there as you can and leave your name in histoy! Do you have the valor?
+        </p>
+      </div>
+      <div class="playInstructions">
+        <p>It's very simple and straightforward to navigate the dungeon and slay monsters.</p>
+        <ul> 
+          <li>
+            <p>Use the arrow keys to move in 4 directions.</p>
+          </li>
+          <li>
+            <p>Use the space bar to shoot arrows. Holding the space bar will auto shoot.</p>
+          </li>
+          <li>
+            <p>There is no win mechanic(I DID say the future doesnt look good). Your goal is to slay as many monsters as possible before you meet your end.</p>
+          </li>
+          <li>
+            <p>You only have one life so use it wisely!</p>
+          </li> 
+        </ul>
+      </div>
     </div>
     <div class="intro"> 
-      <button id="play"> For Valor! </button>
+      <button id="play">I Have The Valor!</button>
     </div>
     <input type="image"  id="audio" src="./src/images/audioButton.png" hidden="true" />
     <input type="image"  id="mute" src="./src/images/muteButton.png" hidden="true" />
