--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <p>Use the space bar to shoot arrows. Holding the space bar will auto shoot.</p>
           </li>
           <li>
+            <p>The "P" key will pause the game.</p>
+          </li>
+          <li>
             <p>There is no win mechanic(I DID say the future doesnt look good). Your goal is to slay as many monsters as possible before you meet your end.</p>
           </li>
           <li>
