--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta property='og:title' content='Valor'/>
+    <meta property="og:image" content="<%= image_url('WikiScreenShot1.png') %>">
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  type="text/css" href="./css/main.css" />
     <title>Valor</title>
