--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta property='og:title' content='Valor'/>
-    <meta property="og:image" content="<%= image_url('WikiScreenShot1.png') %>">
+    <meta property="og:image" content="https://github.com/Dapper-Dan/Valor/blob/master/src/images/Screenshot.png">
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
