--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:image" content="https://github.com/Dapper-Dan/Valor/blob/master/src/images/Screenshot.png">
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" />
     <link rel="stylesheet"  type="text/css" href="./css/main.css" />
     <title>Valor</title>
   </head>
