add mobile controls

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="gameBackgroundInfo">
         <p>
           The king and guard have left for vacation. They mistakenly forgot that their best warrior was patrolling the dungeon and locked the door behind them. The future doesn't look good.
-          You will most likely only survive for a day or two so you might as well take out as many baddies down there as you can and leave your name in histoy! Do you have the valor?
+          If you're going out, you might as well take out as many ghouls and creeps down there as you can and leave your name in histoy! Do you have the valor?
         </p>
       </div>
       <div class="playInstructions">
@@ -58,7 +58,7 @@
             <p>There is no win mechanic(I DID say the future doesnt look good). Your goal is to slay as many monsters as possible before you meet your end.</p>
           </li>
           <li>
-            <p>You only have one life so use it wisely!</p>
+            <p>You only have 6 lives so use them wisely!</p>
           </li> 
         </ul>
       </div>
