redesign menu info sections

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta property='og:title' content='Valor'/>
     <meta property="og:image" content="./src/images/Screenshot.png"/>
     <meta property="og:image:width" content="300" />
@@ -13,6 +14,9 @@
   <body>
     <div class="landingPage">
       <div class="gameBackgroundInfo">
+        <div class="closeButton">
+          x
+        </div>
         <p class="gameBackgroundInfoText">
           The king and guard have left for vacation. They mistakenly forgot that their best warrior was patrolling the dungeon and locked the door behind them. The future doesn't look good.
           If you're going out, take as many creeps and ghouls down with you as you can, and leave your name in history! Do you have the valor?
@@ -43,26 +47,29 @@
           </ul>
         </div>
       </div>
-      <!-- <div class="playInstructions">
-        <p>It's very simple and straightforward to navigate the dungeon and slay monsters.</p>
+      <div class="playInstructions">
+        <div class="closeButton">
+          x
+        </div>
+        <p class="playInstructionsText">It's very simple and straightforward to navigate the dungeon and slay monsters.</p>
         <ul> 
           <li>
             <p>Use the arrow keys to move in 4 directions.</p>
           </li>
           <li>
-            <p>Use the space bar to shoot arrows. Holding the space bar will auto shoot.</p>
+            <p>Use the spacebar to shoot arrows. Holding the bar will auto shoot.</p>
           </li>
           <li>
             <p>The "P" key will pause the game.</p>
           </li>
           <li>
-            <p>There is no win mechanic(I DID say the future doesnt look good). Your goal is to slay as many monsters as possible before you meet your end.</p>
+            <p>There is no win mechanic. Your goal is to slay as many monsters as possible before you meet your end.</p>
           </li>
           <li>
             <p>You only have 6 lives so use them wisely!</p>
           </li> 
         </ul>
-      </div> -->
+      </div>
     </div>
     <div class="intro"> 
       <button id="play">
